[package]
name = "dataprom"
version = "0.1.0"
authors = ["Kloenk <kloenk@kloenk.de>"]
edition = "2018"

[features]
default = ["completion", "data_raw", "ve_protocol"]
completion = []
data_raw = []
ve_protocol = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["color"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.6.2"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2" }
